--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -20,7 +20,7 @@
                 <a href="/stories/{{_d}}">{{title}}</a>
             </td>
             <td>
-                {{createdAt}}
+                {{formatDate createdAt 'MMMM Do YYYY, h:mm:ss a'}}
             </td>
             <td>
                 <span class="dash-status">
